my second js commit

--- a/js-practice.html
+++ b/js-practice.html
@@ -16,6 +16,7 @@
     console.log(y);
     let z = x * y;
     console.log(z); 
+    
     //Math on my own
     let a = 40;
     console.log(a);
@@ -27,6 +28,16 @@
     console.log(d);
     let e = a/b;
     console.log(e);
+    console.log("Working with strings:");
+    let firstName = 'Emma';
+    let middleName = 'Brooks';
+    let lastName = 'Gilliam';
+    let name = firstName + " " + middleName + " " + lastName;
+    console.log(name)
+
+    //Strings on my own
+    let greeting = 'My name is' + " " + name;
+    console.log(greeting)
   </script>
 </body>
 </html>
