--- a/js-practice.html
+++ b/js-practice.html
@@ -38,6 +38,38 @@
     //Strings on my own
     let greeting = 'My name is' + " " + name;
     console.log(greeting)
+
+    console.log("Using functions:");
+
+    //Function to make square numbers
+    function makeSquare(theNumb) {
+      let squared = theNumb * theNumb;
+      return squared;
+    }
+    let try01 = makeSquare(3);
+    console.log(try01);
+    let try02 = makeSquare(4);
+    console.log(try02);
+    let try03 = makeSquare(5);
+    console.log(try03);
+
+    //Functions on my own
+    function makeName(firstName, middleName, lastName) {
+      let named = firstName + " " + middleName + " " + lastName;
+      return named;
+    }
+    let try04 = makeName(firstName, middleName, lastName)
+    console.log(try04)
+    firstName = 'Robert';
+    middleName = '"Beto"';
+    lastName = 'O\'Rourke';
+    let try05 = makeName(firstName, middleName, lastName)
+    console.log(try05)
+    firstName = 'Joseph';
+    middleName = 'Robinette';
+    lastName = 'Biden';
+    let try06 = makeName(firstName, middleName, lastName)
+    console.log(try06);
   </script>
 </body>
 </html>
