--- a/js-practice.html
+++ b/js-practice.html
@@ -70,6 +70,32 @@
     lastName = 'Biden';
     let try06 = makeName(firstName, middleName, lastName)
     console.log(try06);
+
+    // Just a log to show in our Console
+    console.log("Making a better name function:");
+
+    // A better name function to fix middle initials
+    function makeBetterName(firstName, middleName, lastName) {if (middleName.length === 1) {
+    middleName = middleName + ".";
+    }
+    let fullName = firstName + " " + middleName + " " + lastName;
+    return fullName;
+    }
+    console.log(makeBetterName("Joan", "Marie", "Larkin"));
+    console.log(makeBetterName("John", "F", "Kennedy"));
+    console.log(makeBetterName("Bevo", "L", "Onghorn"));
+    
+    //Using else and if else
+    console.log("scoreCompare function");
+    function scoreCompare(home, away) {
+    if (home > away) {
+      return "Home team wins!";
+    } else {
+      return "Away team wins :("
+    }
+    }
+    console.log(scoreCompare(5,3));
+    console.log(scoreCompare(3,5));
   </script>
 </body>
 </html>
